# Training

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: text.h  triangle.h  util.h
snippets/: line.txt
src/: main.cpp  text.cpp  triangle.cpp  util.cpp
